# pabrod.github.io

./: .gitignore  .gitmodules  Makefile  NLeSC_symp19-en.html  NLeSC_symp19.html  PyR-en.html  PyR.html  README.md  abandono-twitter-es.html  altavoz-idiotas-es.html  animations-r-en.html  animations-r.html  archives.html  arte_y_ciencia-en.html  arte_y_ciencia.html  articulo-tedioso-es.html  aurora-boreal-es.html  authors.html  caja-es.html  categories.html  cenl-en.html  cenl.html  chaos-neutrality-en.html  chaos-neutrality.html  clock-en.html  clock.html  coding-cafe.html  complex-sig-en.html  complex-sig.html  concentracion-es.html  contenido-privado-es.html  correr-es.html  cumbres-comunicacion-es.html  dato-es.html  daylight-saving-en.html  daylight-saving.html  defense-en.html  defense-es.html  defense.html  detalles.html  (+64 more)
author/: alexis-metaireau.html  conan-doyle.html  pablo-rodriguez-sanchez.html  pablo-rodriguez-sanchez2.html  pablo-rodriguez-sanchez3.html  pablo-rodriguez-sanchez4.html  pablo-rodriguez-sanchez5.html
category/: blog.html  blog2.html  blog3.html  blog4.html  blog5.html  python.html
content/: 2024-10-08 digital-garden-es.md  2024-10-11 manias.md  2024-10-18 quince-anos.md  2024-10-23 cumbres-comunicacion.md  2024-10-28 seminar-rse-autodiff.md  2024-10-30 documentos-rne.md  2024-11-17 abandono-twitter.md  2024-12-05 detalles.md  2025-03-05 pizarra.md  2025-03-09 pasmo.md  2025-04-24 ratilla.md  2025-04-28 multilinguismo.md  2025-05-12 concentracion.md  2025-05-15 coding-cafe.md  2025-05-26 altavoz-idiotas.md  2025-06-04 selectividad.md  (+10 more)
(+138 files in other folders)
