[tool.poetry]
name = "my-site"
version = "0.1.0"
description = "My personal website"
authors = ["Pablo Rodríguez Sánchez <pablo.rodriguez.sanchez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.10.1"}
ghp-import = "^2.1.0"
academicrecordparser = {path = "auxs/academicrecordparser", develop = true}

[tool.poetry.group.recommended.dependencies]
typogrify = "^2.0.7"
pelican-render-math = "^1.0.3"
markdown-mermaidjs = "^1.0.0"

[tool.poetry.group.importing.dependencies]
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
